third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/after-table.stderr
TOML parse error at line 1, column 9
  |
1 | [error] this = "should not be here"
  |         ^
invalid table header
expected newline, `#`
